--- a/src/css/typography.css
+++ b/src/css/typography.css
@@ -9,12 +9,6 @@
     margin-top: 0.25rem;
     margin-bottom: 0.25rem;
   }
-  .max-width {
-    max-width: calc(1110px + 17em);
-    margin: 0 auto;
-    padding: 0 0.67em;
-    font-size: initial;
-  }
 }
 
 @layer base {
